; ModuleID = '/home/carl/AnghaBench/openssl/crypto/store/extr_store_lib.c_OSSL_STORE_INFO_new_CERT.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/store/extr_store_lib.c_OSSL_STORE_INFO_new_CERT.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OSSL_STORE_INFO_CERT = common dso_local global i32 0, align 4
@OSSL_STORE_F_OSSL_STORE_INFO_NEW_CERT = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @OSSL_STORE_INFO_new_CERT(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32, i32* @OSSL_STORE_INFO_CERT, align 4
  %5 = load i32*, i32** %2, align 8
  %6 = call i32* @store_info_new(i32 %4, i32* %5)
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i32, i32* @OSSL_STORE_F_OSSL_STORE_INFO_NEW_CERT, align 4
  %11 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %12 = call i32 @OSSL_STOREerr(i32 %10, i32 %11)
  br label %13

13:                                               ; preds = %9, %1
  %14 = load i32*, i32** %3, align 8
  ret i32* %14
}

declare dso_local i32* @store_info_new(i32, i32*) #1

declare dso_local i32 @OSSL_STOREerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
